Android Studio, Ejercicio 02/Solución 02. Crear lista

--- a/S02_Solucion_DesplegarLista/app/src/main/res/layout/activity_main.xml
+++ b/S02_Solucion_DesplegarLista/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,16 @@
 
     <!--TODO (2) Añadir un @id al TextView con valor @+id/super_nombres-->
     <!--TODO (6) Colocar un ScrollView que contenga el TextView-->
-    <TextView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:id="@+id/super_nombres"
+            />
+    </ScrollView>
 
 </FrameLayout>
